# TestU01

./: .gitignore  CMakeLists.txt  bootstrap  configure  configure.ac
config/: CMakeLists.txt
examples/: CMakeLists.txt
include/: CMakeLists.txt  config.h.in  config_cmake.h.in  gdefconf_cmake.h.in
mylib/: CMakeLists.txt  num2.c
probdist/: CMakeLists.txt  gofw.c
testu01/: CMakeLists.txt  bbattery.c  bbattery.tex  svaria.c  swrite.c
