function(add_example example_name)
    add_executable(${example_name} "${example_name}.c")
    target_link_libraries(${example_name} PRIVATE testu01)
    add_test(NAME ${example_name} COMMAND ${example_name} WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
endfunction()

add_example(bat1)
add_example(bat2)
add_example(bat3)
add_example(birth1)
add_example(birth2)
add_example(ex1)
add_example(ex3)
add_example(ex4)
add_example(ex7)
add_example(fbirth)
add_example(fcoll)
add_example(scat)
add_example(scat2)
add_example(speedpcg32)
add_example(speedxoshiro128plusplus)
add_example(testpcg32)
add_example(testxoshiro128plusplus)

target_sources(ex3 PRIVATE my16807.c)
target_sources(ex7 PRIVATE xorshift.c mrg32k3a.c)

add_library(pcg32 OBJECT pcg32.c)
target_link_libraries(speedpcg32 PRIVATE pcg32)
target_link_libraries(testpcg32 PRIVATE pcg32)

add_library(xoshiro128plusplus OBJECT xoshiro128plusplus.c)
target_link_libraries(speedxoshiro128plusplus PRIVATE xoshiro128plusplus)
target_link_libraries(testxoshiro128plusplus PRIVATE xoshiro128plusplus)