add_library(testu01)
target_link_libraries(testu01 PUBLIC testu01_include mylib probdist)
target_generate_headers(testu01
	unif01
	ulcg
	umrg
	ucarry
	utaus
	ugfsr
	uinv
	uquad
	ucubic
	ulec
	utezuka
	umarsa
	uweyl
	uknuth
	uwu
	unumrec
	uvaria
	usoft
	ugranger
	ucrypto
	ufile
	udeng
	utouzin
	uautomata
	uxorshift
	ubrent
	rijndael-alg-fst
	tu01_sha1
	scatter
	swrite
	sres
	smultin
	sknuth
	smarsa
	sstring
	svaria
	snpair
	swalk
	sentrop
	sspectral
	scomp
	sspacings
	vectorsF2
	bbattery
	ffam
	fcong
	ffsr
	ftab
	fres
	fcho
	fmultin
	fmarsa
	fknuth
	fwalk
	fstring
	fspectral
	fvaria
	fnpair)
target_sources(testu01 PRIVATE
	unif01.c
	ulcg.c
	umrg.c
	ucarry.c
	utaus.c
	ugfsr.c
	uinv.c
	uquad.c
	ucubic.c
	ulec.c
	utezuka.c
	umarsa.c
	uweyl.c
	uknuth.c
	uwu.c
	unumrec.c
	uvaria.c
	usoft.c
	ugranger.c
	ucrypto.c
	ufile.c
	udeng.c
	utouzin.c
	uautomata.c
	uxorshift.c
	ubrent.c
	rijndael-alg-fst.c
	tu01_sha1.c
	scatter.c
	swrite.c
	sres.c
	smultin.c
	sknuth.c
	smarsa.c
	sstring.c
	svaria.c
	snpair.c
	swalk.c
	sentrop.c
	sspectral.c
	scomp.c
	sspacings.c
	vectorsF2.c
	bbattery.c
	ffam.c
	fcong.c
	ffsr.c
	ftab.c
	fres.c
	fcho.c
	fmultin.c
	fmarsa.c
	fknuth.c
	fwalk.c
	fstring.c
	fspectral.c
	fvaria.c
	fnpair.c)
